<resources>
    <string name="app_name">Peta Kecelakaan Sepeda</string>
    <string name="tabrakan">Tabrakan</string>
    <string name="bahaya">Bahaya</string>
    <string name="pencurian">Pencurian</string>
    <string name="masalahinfrastruktir">Masalah Infrastruktur</string>
    <string name="danlainlain">Dan Lain-Lain</string>
    <string name="btn_cari">Cari</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_mulai">Mulai!</string>
    <string name="btn_contactus">Contact Us</string>
    <string name="btn_about">About</string>


</resources>