<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_border"
        android:padding="20dp"
        android:text="BIKEWISE.ORG"
        android:textSize="35dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cari Insiden :"
            android:paddingBottom="25dp"
            android:paddingTop="150dp"
            android:textSize="30dp"/>
        <RadioButton
            android:id="@+id/radiobutton_tabrakan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabrakan"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:onClick="onRadioButtonClicked"
            />
        <RadioButton
            android:id="@+id/radiobutton_bahaya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/bahaya"
            android:onClick="onRadioButtonClicked"

            />
        <RadioButton
            android:id="@+id/radiobutton_pencurian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/pencurian"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radiobutton_masalahinfrastruktur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/masalahinfrastruktir"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radiobutton_danlainlain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/danlainlain"
            android:paddingBottom="0dp"
            android:onClick="onRadioButtonClicked"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/btn_cari" />


</LinearLayout>