<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/bikewise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_border"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="BIKEWISE.ORG"
        android:textSize="35dp"/>

    <TextView
        android:id="@+id/pilihInsiden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pilih Kategori Insiden:"
        android:layout_below="@+id/bikewise"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:textSize="15dp"/>


    <CheckBox
        android:id="@+id/checkbox_tabrakan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tabrakan"
        android:layout_below="@+id/pilihInsiden"
        android:paddingLeft="10dp"
        android:onClick="onCheckboxClicked"
        />
    <CheckBox
        android:id="@+id/checkbox_bahaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_tabrakan"
        android:text="@string/bahaya"
        android:paddingLeft="10dp"
        android:onClick="onCheckboxClicked"

        />
    <CheckBox
        android:id="@+id/checkbox_pencurian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_bahaya"
        android:text="@string/pencurian"
        android:paddingLeft="10dp"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/checkbox_masalahinfrastruktur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_pencurian"
        android:text="@string/masalahinfrastruktir"
        android:paddingLeft="10dp"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/checkbox_danlainlain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_masalahinfrastruktur"
        android:text="@string/danlainlain"
        android:paddingLeft="10dp"
        android:paddingBottom="0dp"
        android:onClick="onCheckboxClicked"/>

    <TextView
        android:id="@+id/judulInsiden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Judul Insiden:"
        android:layout_below="@+id/checkbox_danlainlain"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:textSize="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/judulInsiden"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/btn_submit" />


</RelativeLayout>